# Pacman-eksamen

./: Blinky.cpp  Blinky.h  CMakeLists.txt  Cage.cpp  Cage.h  Character.cpp  Character.h  Clyde.cpp  Clyde.h  Controller.cpp  Controller.h  Entity.cpp  Entity.h  GameManager.cpp  GameManager.h  Ghost.cpp  Ghost.h  Inky.cpp  Inky.h  Map.cpp  Map.h  NpcController.cpp  NpcController.h  Pacman.cpp  Pacman.h  Pellet.cpp  Pellet.h  Pinky.cpp  Pinky.h  PlayerController.cpp  PlayerController.h  PowerPellet.cpp  PowerPellet.h  Rect.cpp  Rect.h  Screen.cpp  Screen.h  Sprite.cpp  Sprite.h  Wall.cpp  (+2 more)
Maps/: 0.txt  1.txt
